Main is now vertically aligned correctly

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,6 +78,7 @@ header > *:hover{
 .row{
     justify-content: center;
     row-gap: 2rem;
+    align-content: flex-start;
 }
 
 .col{
